# exceptiongroup

./: pyproject.toml  setup.cfg
ci/: travis.sh
docs/source/: conf.py
exceptiongroup/: _tools.py  _version.py
