[build-system]
requires = ["setuptools >= 46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.towncrier]
package = "exceptiongroup"
filename = "docs/source/history.rst"
directory = "newsfragments"
underlines = ["-", "~", "^"]
issue_format = "`#{issue} <https://github.com/python-trio/exceptiongroup/issues/{issue}>`__"

[tool.black]
line-length = 79
