[metadata]
name = exceptiongroup
version = attr: exceptiongroup._version.__version__
description = A way to represent multiple things going wrong at the same time, in Python
url = https://github.com/python-trio/exceptiongroup
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Nathaniel J. Smith
author_email = njs@pobox.com
license = MIT -or- Apache License 2.0
keywords =
    async
    exceptions
    error handling
classifiers =
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: Apache Software License
    Framework :: Trio
    Framework :: AsyncIO
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Intended Audience :: Developers

[options]
packages = find:
install_requires = trio
python_requires = >=3.5
